--- a/analise.html
+++ b/analise.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Otimização de Occupant Packaging</title>
+  <title>Occupant Packaging</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
@@ -12,7 +12,7 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #f4f4f9;
+      background: #000000;
       margin: 0;
       padding: 0;
     }
