--- a/analise.html
+++ b/analise.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Otimização de Occupant Packaging</h1>
+  <h1>Occupant Packaging</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <div id="metrics">
